# pico_fatfs

./: CHANGELOG.md  CMakeLists.txt  CmakeLists.txt  README.md  Readme.md  main.cpp  tf_card.c  tf_card.h
.github/workflows/: build-binaries.yml
doc/benchmark/07 - Sandisk Extreme 128GB/: Thumbs.db
fatfs/: ffconf.h  tf_card.c  tf_card.h
pio/spi/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
tests/common/: benchmark.cpp
tests/test_spi/: CMakeLists.txt  main.cpp
tests/test_spi_pio/: CMakeLists.txt  main.cpp
